gitops/app-quarkus-observability/ns-quarkus-observability.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: quarkus-observability
  labels:
    openshift.io/user-monitoring: true
  annotations:
    argocd.argoproj.io/sync-wave: "-10"
