gitops/app-quarkus-observability/deployment-app.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: app
  labels:
    app: app
    app.kubernetes.io/name: app
    app.openshift.io/runtime: quarkus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
        deployment: app
    spec:
      containers:
        - name: app
          image: quay.io/alopezme/quarkus-observability-app:latest-micro
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: 8080
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 8080
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          resources:
            limits:
              cpu: 300m
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 50Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
          volumeMounts:
            - name: app-config
              mountPath: "/work/config"
      volumes:
        - name: app-config
          configMap:
            name: app-config
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
