gitops/app-quarkus-observability/svc-app.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: app
  labels:
    app: app
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
  selector:
    app: app
    deployment: app
