gitops/app-quarkus-observability/route-app.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: app
  labels:
    app: app
spec:
  to:
    kind: Service
    name: app
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
